--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <!--Logo-->
             <div class="nav-logo">
-                <p class="nav-name">NB</p>
+                <p class="nav-name">NNB</p>
             </div>
 
             <!--Menu-->
