--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Nirmal Boghara</title>
+    <link rel="icon" href="images (1).png">
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@iconscout/unicons@4.0.8/css/line.min.css">
@@ -81,7 +82,7 @@
                     </div>
                     <div class="social-icons">
                         <div class="icon">
-                            <a href="https://www.instagram.com/18.nirmal_/">
+                            <a href="https://www.instagram.com/18.nirmal_/" style="color: #027c67;">
                                 <i class="uil uil-instagram"></i>
                             </a>
                         </div>
@@ -93,7 +94,7 @@
                         </div>
         
                         <div class="icon">
-                            <a href="https://github.com/nirmal141">
+                            <a href="https://github.com/nirmal141" style="color: #027c67;">
                                 <i class="uil uil-github-alt"></i>
                             </a>
                         </div>
