--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             </div>
 
             <!--Dark Mode-->
-            <div class="mode">
+            <!-- <div class="mode">
                 <div class="moon-sun" id="toggle-switch">
                     <i class="fa fa-moon" id="moon"></i>
                     <i class="fa fa-sun" id="sun"></i>
                 </div>
-            </div>
+            </div> -->
             <div class="nav-menu-btn">
                 <i class="uil uil-bars" onclick="myMenyFunction()"></i>
             </div>
@@ -69,7 +69,7 @@
                         <span class="typedText"></span>
                     </div>
                     <div class="text-info">
-                        <p>My name is Nirmal! I'm a Software Engineer</p>
+                        <p>AI/ML Enthusiast | Software Engineer | Web Programmer</p>
                     </div>
                     <div class="text-btn">
                         <a href="#contact">
@@ -82,7 +82,7 @@
                     </div>
                     <div class="social-icons">
                         <div class="icon">
-                            <a href="https://www.instagram.com/18.nirmal_/" style="color: #027c67;">
+                            <a href="https://www.instagram.com/18.nirmal_/" style="color: #fff;">
                                 <i class="uil uil-instagram"></i>
                             </a>
                         </div>
@@ -94,7 +94,7 @@
                         </div>
         
                         <div class="icon">
-                            <a href="https://github.com/nirmal141" style="color: #027c67;">
+                            <a href="https://github.com/nirmal141" style="color: #fff;">
                                 <i class="uil uil-github-alt"></i>
                             </a>
                         </div>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="featured-image">
                     <div class="image">
-                        <img src="profile-pic (8).png" alt="">
+                        <!-- <img src="profile-pic (8).png" alt=""> -->
                     </div>
                 </div>
             </section>
@@ -315,7 +315,7 @@
 
             </div>
             <div class="bottom-footer">
-                <p>Copyright &copy; <a href="#home" style="text-decoration: none; color: #027c67;">Nirmal Boghara</a> - All rights reserved</p>
+                <p>Copyright &copy; <a href="#home">Nirmal Boghara</a> - All rights reserved</p>
             </div>
         </footer>
 
