--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div> -->
             <div class="nav-menu-btn">
-                <i class="uil uil-bars" onclick="myMenyFunction()"></i>
+                <i class="uil uil-bars" style="color: #fff;" onclick="myMenuFunction()"></i>
             </div>
         </nav>
 
@@ -287,7 +287,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="footer_menu_list">
-                        <a href="#projects">Projects</a>
+                        <a href="#projects">Education</a>
                     </li>
                     <li class="footer_menu_list">
                         <a href="#contact">Contact</a>
