--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </div>
                 <div class="featured-image">
                     <div class="image">
-                        <!-- <img src="profile-pic (8).png" alt=""> -->
+                        <img src="profile-pic (11).png" alt="">
                     </div>
                 </div>
             </section>
