--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <span class="typedText"></span>
                     </div>
                     <div class="text-info">
-                        <p>AI/ML Enthusiast | Software Engineer | Web Programmer</p>
+                        <p>AI/ML Enthusiast /> Software Engineer /> Web Programmer</p>
                     </div>
                     <div class="text-btn">
                         <a href="#contact">
@@ -113,7 +113,7 @@
                 </div>
                 <div class="featured-image">
                     <div class="image">
-                        <img src="profile-pic (11).png" alt="">
+                        <img src="profile-pic (11).png" alt="" >
                     </div>
                 </div>
             </section>
@@ -122,6 +122,7 @@
             <section class="section" id="about">
                 <div class="top-header">
                     <h1>About Me</h1>
+                    <hr>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -192,6 +193,7 @@
             <section class="section" id="projects">
                 <div class="top-header">
                     <h1>Education</h1>
+                    <hr>
                 </div>
                 <div class="project-container">
                     <div class="project-box" >
@@ -219,6 +221,7 @@
             <section class="section" id="projects">
                 <div class="top-header">
                     <h1>Experience</h1>
+                    <hr>
                 </div>
                 <div class="project-container">
                     <div class="project-box">
@@ -258,7 +261,9 @@
             <section class="section" id="contact">
                 <div class="top-header">
                     <h1>Let's work Together</h1>
+                    
                     <span>Do you have a project in mind, contact me here</span>
+                    <hr style="margin-top: 15px;">
                 </div>
                 <div class="row">
                     <div class="col">
