--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                             <figure class="about-me">
                                 <figcaption>
                                     <img src="" alt="" class="profile">
-                                    <h2>Web Developer</h2>
-                                    <p>I have 2 years of experience in building and designing softwares. Currently, I love to work on web applications using technologies like React, Tailwind, Next JS and GraphQL.</p>
+                                    <h2>Software Engineer | Web Developer</h2>
+                                    <p>With a passion for innovation and a diverse skill set spanning across software development, web development, and AI/ML engineering, I bring a unique blend of creativity and technical expertise to the table. My journey in technology has been driven by a relentless pursuit of excellence, coupled with a commitment to staying abreast of the latest advancements in the field. Whether it's crafting elegant web solutions, architecting robust software systems, or delving into the realms of artificial intelligence and machine learning, I am dedicated to delivering impactful results that exceed expectations.</p>
                                 </figcaption>
                             </figure>
                             <a href="#contact">
@@ -146,7 +146,7 @@
                             <span class="title">HTML</span>
                             <div class="skill-bar css">
                                 <span class="skill-per">
-                                    <span class="tooltip">80%</span>
+                                    <span class="tooltip">100%</span>
                                 </span>
                             </div>
                         </div>
@@ -154,8 +154,8 @@
                         <div class="skill-box">
                             <span class="title">CSS</span>
                             <div class="skill-bar">
-                                <span class="skill-per">
-                                    <span class="tooltip">80%</span>
+                                <span class="skill-per css">
+                                    <span class="tooltip">95%</span>
                                 </span>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                             <span class="title">Python</span>
                             <div class="skill-bar">
                                 <span class="skill-per python">
-                                    <span class="tooltip">70%</span>
+                                    <span class="tooltip">90%</span>
                                 </span>
                             </div>
                         </div>
@@ -173,7 +173,43 @@
                             <span class="title">JavaScript</span>
                             <div class="skill-bar">
                                 <span class="skill-per javascript">
-                                    <span class="tooltip">40%</span>
+                                    <span class="tooltip">80%</span>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="skill-box">
+                            <span class="title">Java</span>
+                            <div class="skill-bar">
+                                <span class="skill-per java">
+                                    <span class="tooltip">70%</span>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="skill-box">
+                            <span class="title">React.Js</span>
+                            <div class="skill-bar">
+                                <span class="skill-per react">
+                                    <span class="tooltip">70%</span>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="skill-box">
+                            <span class="title">SQL/MySQL</span>
+                            <div class="skill-bar">
+                                <span class="skill-per sql">
+                                    <span class="tooltip">85%</span>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="skill-box">
+                            <span class="title">TensorFlow, PyTorch</span>
+                            <div class="skill-bar">
+                                <span class="skill-per pytorch">
+                                    <span class="tooltip">60%</span>
                                 </span>
                             </div>
                         </div>
@@ -182,7 +218,7 @@
                             <span class="title">PHP</span>
                             <div class="skill-bar">
                                 <span class="skill-per php">
-                                    <span class="tooltip">30%</span>
+                                    <span class="tooltip">50%</span>
                                 </span>
                             </div>
                         </div>
@@ -255,6 +291,63 @@
                             Used Node.js, and Python for Server-Side Programming. Gained E ective communication skills for collaborating with team members and stakeholders.</p>
                     </div>
                 </div>
+            </section>
+            
+            <section class="section">
+                <div class="top-header">
+                    <h1>Some of my past projects</h1>
+                    <hr>
+                </div>
+
+                <div class="main-project-container">
+                    <div class="main-project-box">
+                        <img src="Gymster.jpg" alt="">
+                        <h3>Fittify - Your One Stop Health Portfolio</h3>
+                        <!-- <p>This is a one-stop health solution and portfolio site where users can track their records, and we provide them perfect diet and -->
+                            <!-- workout plans using technologies like Express.Js, MongoDB and API’s.</p> -->
+                            <!-- <a href="#">Read More</a> -->
+                    </div>
+                    <div class="main-project-box">
+                        <img src="https://image.winudf.com/v2/image/bmV0Lm11Z2NhdC5ldmVyeWNoYXRfc2NyZWVuXzBfMTUzODYwNDEwOF8wMTY/screen-0.jpg?fakeurl=1&type=.jpg" alt="">
+                        <h3>Anonymous Chat Application</h3>
+                        <!-- <p>A user-friendly client interface for anonymous message exchange.</p> -->
+                            <!-- <a href="#">Read More</a> -->
+                    </div>
+                </div>
+                <div class="project-btn">
+                    <button class="about-me-btn">
+                        Have a Look!
+                    </button>
+                    <button class="about-me-btn">
+                        Have a Look!
+                    </button>
+                </div>
+
+                <div class="main-project-container">
+                    <div class="main-project-box">
+                        <img src="fitfarm.jpg"  alt="">
+                        <h3>FitFarm - Smart Agriculture System</h3>
+                        <!-- <p>This -->
+                            <!-- project integrates sophisticated Supervised ML algorithms (DT, SVM, KNN, RF, and NB) and an interactive dashboard using web programming technologies like HTML, React.JS, JavaScript, and Node.Js to predict the most suitable crops according to soil conditions with 85% accuracy and provide invaluable support to farmers.</p> -->
+                            <!-- <a href="#">Read More</a> -->
+                    </div>
+                    <div class="main-project-box">
+                        <img src="https://pictures.brafton.com/x_0_0_0_14119699_800.jpg" alt="">
+                        <h3>Weather Prediction System</h3>
+                        <!-- <p>This system utilizes ML algorithms, such as Naive Bayes and ensemble methods, to analyze and predict weather patterns.</p> -->
+                        <!-- <a href="#">Read More</a> -->
+                    </div>
+                    
+                </div>
+                <div class="project-btn">
+                    <button class="about-me-btn">
+                        Have a Look!
+                    </button>
+                    <button class="about-me-btn">
+                        Have a Look!
+                    </button>
+                </div>
+
             </section>
 
             <!--Contact box-->
