--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             </section>
 
             <!--Project box-->
-            <section class="section" id="projects">
+            <section class="section" id="experience">
                 <div class="top-header">
                     <h1>Experience</h1>
                     <hr>
