--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                             <button class="btn hire-btn">Hire Me</button>
 
                         </a>
-                        <a href="resume.pdf" download>
-                            <button class="btn">Download CV <i class="uil uil-file"></i></button>
-                        </a>
+                            <!-- <a href="resume.pdf" download>
+                                <button class="btn">Download CV <i class="uil uil-file"></i></button>
+                            </a> -->
                     </div>
                     <div class="social-icons">
                         <div class="icon">
