--- a/index.html
+++ b/index.html
@@ -80,16 +80,17 @@
                         <span class="typedText"></span>
                     </div>
                     <div class="text-info">
-                        <p>AI/ML Enthusiast /> Software Engineer /> Web Programmer</p>
+                        <p>AI/ML Enthusiast /> Software Engineer />Web Developer</p>
                     </div>
                     <div class="text-btn">
                         <a href="#contact">
                             <button class="btn hire-btn">Hire Me</button>
+                            <!-- <button class="btn hire-btn">Resume</button> -->
 
                         </a>
-                            <!-- <a href="resume.pdf" download>
-                                <button class="btn">Download CV <i class="uil uil-file"></i></button>
-                            </a> -->
+                            <a href="Nirmal Pravinbhai Boghara Resume .pdf" download>
+                                <button class="btn">Download Resume <i class="uil uil-file"></i></button>
+                            </a>
                     </div>
                     <div class="social-icons">
                         <div class="icon">
@@ -113,7 +114,7 @@
                 </div>
                 <div class="featured-image">
                     <div class="image">
-                        <img src="profile-pic (13).png" alt="" >
+                        <img src="/138615C1-D857-4846-96E9-606E68042722_1_201_a.jpeg" alt="" >
                     </div>
                 </div>
             </section>
