--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="featured-image">
                     <div class="image">
-                        <img src="/138615C1-D857-4846-96E9-606E68042722_1_201_a.jpeg" alt="" >
+                        <img src="/profile-pic (13).png" alt="" >
                     </div>
                 </div>
             </section>
