--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <section class="featured-box" id="home">
                 <div class="featured-text">
                     <div class="hello">
-                        <p>HI, I'M NIRMAL!</p>
+                        <p>HI, I'M NIRMA!</p>
                     </div>
                     <div class="featured-name">
                         <span class="typedText"></span>
