--- a/index.html
+++ b/index.html
@@ -608,6 +608,145 @@
         0% { transform: rotate(-45deg) scale(0); }
         100% { transform: rotate(-45deg) scale(1); }
     }
+
+    /* Mobile Responsiveness Fixes */
+    @media (max-width: 768px) {
+        /* General Text Adjustments */
+        h1.gradient-text {
+            font-size: 2.5rem !important; /* Smaller hero title */
+        }
+
+        .text-4xl {
+            font-size: 2rem !important; /* Smaller section headings */
+        }
+
+        .text-2xl {
+            font-size: 1.5rem !important; /* Smaller sub-headings */
+        }
+
+        /* Section Padding Adjustments */
+        section {
+            padding-left: 5vw !important;
+            padding-right: 5vw !important;
+        }
+
+        /* Navigation Adjustments */
+        nav {
+            padding-left: 5vw !important;
+            padding-right: 5vw !important;
+        }
+
+        /* Skills Section */
+        .skill-card {
+            margin-bottom: 1.5rem !important;
+        }
+
+        .skill-bar-container {
+            margin-bottom: 0.75rem !important;
+        }
+
+        /* Project Cards */
+        .project-image {
+            height: 200px !important; /* Smaller project images */
+        }
+
+        /* Experience Timeline */
+        .timeline-content {
+            padding: 1rem !important;
+            margin-left: 0 !important;
+            margin-right: 0 !important;
+        }
+
+        /* Contact Form */
+        .contact-form input,
+        .contact-form textarea {
+            padding: 0.75rem !important;
+        }
+
+        /* Footer */
+        footer ul {
+            gap: 1rem !important;
+            flex-wrap: wrap !important;
+            justify-content: center !important;
+        }
+    }
+
+    /* Additional Mobile Menu Styles */
+    @media (max-width: 1024px) {
+        #myNavMenu {
+            position: fixed;
+            top: 80px;
+            left: 0;
+            right: 0;
+            background: var(--bg-primary);
+            padding: 1rem;
+            border-bottom: 1px solid var(--highlight);
+            display: none;
+        }
+
+        #myNavMenu.active {
+            display: block;
+        }
+
+        #myNavMenu ul {
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        #myNavMenu li {
+            width: 100%;
+        }
+
+        #myNavMenu a {
+            display: block;
+            padding: 0.75rem;
+            text-align: center;
+        }
+    }
+
+    /* Improved Card Layouts */
+    @media (max-width: 640px) {
+        .grid {
+            grid-template-columns: 1fr !important;
+        }
+
+        .flex-col-reverse {
+            flex-direction: column !important;
+        }
+
+        .project-card {
+            margin-bottom: 2rem !important;
+        }
+    }
+
+    /* Better Typography for Small Screens */
+    @media (max-width: 480px) {
+        body {
+            font-size: 14px !important;
+        }
+
+        .text-lg {
+            font-size: 1rem !important;
+        }
+
+        .text-xl {
+            font-size: 1.25rem !important;
+        }
+    }
+
+    /* Improved Touch Targets */
+    @media (hover: none) {
+        button, 
+        a {
+            min-height: 44px !important;
+            min-width: 44px !important;
+        }
+
+        .skill-filter-btn {
+            padding: 0.75rem 1rem !important;
+            margin: 0.25rem !important;
+        }
+    }
     </style>
 </head>
 
@@ -2248,5 +2387,28 @@
         100% { transform: rotate(-45deg) scale(1); }
     }
     </style>
+
+    <script>
+    function myMenuFunction() {
+        const navMenu = document.getElementById("myNavMenu");
+        navMenu.classList.toggle("active");
+        
+        // Close menu when clicking outside
+        document.addEventListener('click', function(event) {
+            const isClickInside = navMenu.contains(event.target) || 
+                                 event.target.closest('button');
+            if (!isClickInside && navMenu.classList.contains('active')) {
+                navMenu.classList.remove('active');
+            }
+        });
+    }
+
+    // Close menu when clicking a link
+    document.querySelectorAll('#myNavMenu a').forEach(link => {
+        link.addEventListener('click', () => {
+            document.getElementById("myNavMenu").classList.remove("active");
+        });
+    });
+    </script>
 </body>
 </html>
