--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             theme: {
                 extend: {
                     colors: {
-                        'bg-primary': '#0a192f',
-                        'secondary-bg': '#112240',
+                        'bg-primary': '#000000',
+                        'secondary-bg': '#0a1220',
                         'highlight': '#64ffda',
                         'secondary-text': '#8892b0',
-                        'nav-bg': 'rgba(10, 25, 47, 0.85)',
+                        'nav-bg': 'rgba(0, 0, 0, 0.85)',
                     },
                     fontFamily: {
                         'poppins': ['Poppins', 'sans-serif'],
